--- a/SDL_UpdateTexture.mediawiki
+++ b/SDL_UpdateTexture.mediawiki
@@ -16,10 +16,10 @@ int SDL_UpdateTexture(SDL_Texture*    texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to update
+|the texture to update
 |-
 |'''rect'''
-|the [[SDL_Rect]] structure representing the area to update, or NULL to update the entire texture
+|an [[SDL_Rect]] structure representing the area to update, or NULL to update the entire texture
 |-
 |'''pixels'''
 |the raw pixel data
