--- a/SDL_IntersectRect.mediawiki
+++ b/SDL_IntersectRect.mediawiki
@@ -15,13 +15,13 @@ SDL_bool SDL_IntersectRect(const SDL_Rect* A,
 == Function Parameters ==
 {|
 |'''A'''
-|the first [[SDL_Rect]]
+|an [[SDL_Rect]] structure representing the first rectangle
 |-
 |'''B'''
-|the second [[SDL_Rect]]
+|an [[SDL_Rect]] structure representing the second rectangle
 |-
 |'''result'''
-|--(a pointer to)-- an [[SDL_Rect]] that is filled with the intersection of rectangles '''A''' and '''B'''
+|an [[SDL_Rect]] structure filled in with the intersection of rectangles '''A''' and '''B'''
 |}
 
 == Return Value ==
