--- a/SDL_IntersectRectAndLine.mediawiki
+++ b/SDL_IntersectRectAndLine.mediawiki
@@ -17,19 +17,19 @@ SDL_bool SDL_IntersectRectAndLine(const SDL_Rect* rect,
 == Function Parameters ==
 {|
 |'''rect'''
-|the [[SDL_Rect]] to be compared
+|an [[SDL_Rect]] structure that represents the rectangle to intersect
 |-
 |'''X1'''
-|--(a pointer to)-- the starting X-coordinate of the line
+|a pointer to the starting X-coordinate of the line
 |-
 |'''Y1'''
-|--(a pointer to)-- the starting Y-coordinate of the line
+|a pointer to the starting Y-coordinate of the line
 |-
 |'''X2'''
-|--(a pointer to)-- the ending X-coordinate of the line
+|a pointer to the ending X-coordinate of the line
 |-
 |'''Y2'''
-|--(a pointer to)-- the ending Y-coordinate of the line
+|a pointer to the ending Y-coordinate of the line
 |}
 
 == Return Value ==
