--- a/SDL_UnionRect.mediawiki
+++ b/SDL_UnionRect.mediawiki
@@ -15,13 +15,13 @@ void SDL_UnionRect(const SDL_Rect* A,
 == Function Parameters ==
 {|
 |'''A'''
-|the first [[SDL_Rect]]
+|an [[SDL_Rect]] structure representing the first rectangle
 |-
 |'''B'''
-|the second [[SDL_Rect]]
+|an [[SDL_Rect]] structure representing the second rectangle
 |-
 |'''result'''
-|--(a pointer to)-- an [[SDL_Rect]] that is filled with the union of rectangles '''A''' and '''B'''
+|an [[SDL_Rect]] structure filled in with the union of rectangles '''A''' and '''B'''
 |}
 
 == Code Examples ==
