--- a/SDL_AudioFormat.mediawiki
+++ b/SDL_AudioFormat.mediawiki
@@ -97,7 +97,7 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |AUDIO_U16LSB
 |-
 |
-|<bgcolor="#EDEDED">''32-bit support (New to SDL 1.3)''
+|<bgcolor="#EDEDED">''32-bit support (new to SDL 1.3)''
 |-
 |AUDIO_S32LSB
 |32-bit integer samples in little-endian byte order
@@ -112,7 +112,7 @@ Unspecified bits are always zero.  There are macros in SDL 1.3 and later to quer
 |AUDIO_S32LSB
 |-
 |
-|<bgcolor="#EDEDED">''float support (New to SDL 1.3)''
+|<bgcolor="#EDEDED">''float support (new to SDL 1.3)''
 |-
 |AUDIO_F32LSB
 |32-bit floating point samples in little-endian byte order
