--- a/SDL_SetEventFilter.mediawiki
+++ b/SDL_SetEventFilter.mediawiki
@@ -15,24 +15,22 @@ void SDL_SetEventFilter(SDL_EventFilter filter,
 == Function Parameters ==
 {|
 |'''filter'''
-|the name of a function that gets called when an event happens; see [[#Remarks|Remarks]] for details
+|a function that gets called when an event happens; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
 |^a pointer filled in with user-specified information to be filtered^
 |}
 
 == Code Examples ==
-<<Color2(green,Does this belong in Syntax or Remarks instead?)>>
-```c++
-The filter is protypted as:
- int SDL_EventFilter(void *userdata, SDL_Event * event);
-```
 ```c++
 You can add your code example here
 ```
 
 == Remarks ==
-typedef int (SDLCALL * SDL_EventFilter) (void *userdata, SDL_Event * event);
+The '''filter''' function has the following form:
+ ```c++
+int SDL_EventFilter(void *userdata, SDL_Event * event);
+```
 
 If the ^resulting^ filter returns 1, then the event will be added to the internal queue.
 If it returns 0, then the event will be dropped from the queue, but the internal state will still be updated.  This allows selective filtering of dynamically arriving events.
