--- a/SDL_SetEventFilter.mediawiki
+++ b/SDL_SetEventFilter.mediawiki
@@ -29,7 +29,7 @@ You can add your code example here
 == Remarks ==
 The '''filter''' function has the following form:
  ```
-int SDL_EventFilter(void *userdata, SDL_Event * event);
+int SDL_EventFilter(void *userdata, SDL_Event * event)
 ```
 
 If the ^resulting^ filter returns 1, then the event will be added to the internal queue.
