--- a/SDL_HapticConstant.mediawiki
+++ b/SDL_HapticConstant.mediawiki
@@ -10,7 +10,7 @@ A structure that contains a template for a constant effect.
 {|
 |
 |
-|''Header''
+|<bgcolor="#EDEDED">''Header''
 |-
 |Uint16
 |'''type'''
@@ -22,7 +22,7 @@ A structure that contains a template for a constant effect.
 |-
 |
 |
-|''Replay''
+|<bgcolor="#EDEDED">''Replay''
 |-
 |Uint32
 |'''length'''
@@ -34,7 +34,7 @@ A structure that contains a template for a constant effect.
 |-
 |
 |
-|''Trigger''
+|<bgcolor="#EDEDED">''Trigger''
 |-
 |Uint16
 |'''button'''
@@ -46,7 +46,7 @@ A structure that contains a template for a constant effect.
 |-
 |
 |
-|''Constant''
+|<bgcolor="#EDEDED">''Constant''
 |-
 |Sint16
 |'''level'''
@@ -54,7 +54,7 @@ A structure that contains a template for a constant effect.
 |-
 |
 |
-|''Envelope''
+|<bgcolor="#EDEDED">''Envelope''
 |-
 |Uint16
 |'''attack_length'''
