--- a/SDL_HapticPeriodic.mediawiki
+++ b/SDL_HapticPeriodic.mediawiki
@@ -10,7 +10,7 @@ A structure that contains a template for a periodic effect.
 {|
 |
 |
-|''Header''
+|<bgcolor="#EDEDED">''Header''
 |-
 |Uint16
 |'''type'''
@@ -22,7 +22,7 @@ A structure that contains a template for a periodic effect.
 |-
 |
 |
-|''Replay''
+|<bgcolor="#EDEDED">''Replay''
 |-
 |Uint32
 |'''length'''
@@ -34,7 +34,7 @@ A structure that contains a template for a periodic effect.
 |-
 |
 |
-|''Trigger''
+|<bgcolor="#EDEDED">''Trigger''
 |-
 |Uint16
 |'''button'''
@@ -46,7 +46,7 @@ A structure that contains a template for a periodic effect.
 |-
 |
 |
-|''Periodic''
+|<bgcolor="#EDEDED">''Periodic''
 |-
 |Uint16
 |'''period'''
@@ -66,7 +66,7 @@ A structure that contains a template for a periodic effect.
 |-
 |
 |
-|''Envelope''
+|<bgcolor="#EDEDED">''Envelope''
 |-
 |Uint16
 |'''attack_length'''
