--- a/SDL_SysWMmsg.mediawiki
+++ b/SDL_SysWMmsg.mediawiki
@@ -9,7 +9,7 @@ A structure that contains system-dependent window manager messages.
 {|
 |
 |
-|''All Subsystems''
+|<bgcolor="#EDEDED">''All Subsystems''
 |-
 |SDL_version
 |'''version'''
@@ -21,7 +21,7 @@ A structure that contains system-dependent window manager messages.
 |-
 |
 |
-|''SDL_SYSWM_WINDOWS''
+|<bgcolor="#EDEDED">''SDL_SYSWM_WINDOWS''
 |-
 |HWND
 |'''win.hwnd'''
@@ -41,7 +41,7 @@ A structure that contains system-dependent window manager messages.
 |-
 |
 |
-|''SDL_SYSWM_X11''
+|<bgcolor="#EDEDED">''SDL_SYSWM_X11''
 |-
 |XEvent
 |'''x11.event'''
@@ -49,7 +49,7 @@ A structure that contains system-dependent window manager messages.
 |-
 |
 |
-|''SDL_SYSWM_DIRECTFB''
+|<bgcolor="#EDEDED">''SDL_SYSWM_DIRECTFB''
 |-
 |DFBEvent
 |'''dfb.event'''
