--- a/SDL_SetCursor.mediawiki
+++ b/SDL_SetCursor.mediawiki
@@ -14,7 +14,7 @@ void SDL_SetCursor(SDL_Cursor* cursor)
 == Function Parameters ==
 {|
 |'''cursor'''
-|the cursor to make active <<Color2(green,(Should this be linked to Remarks?))>>
+|a cursor to make active <<Color2(green,(Should this be linked to Remarks?))>>
 |}
 
 == Code Examples ==
