--- a/SDL_UnlockTexture.mediawiki
+++ b/SDL_UnlockTexture.mediawiki
@@ -14,7 +14,7 @@ void SDL_UnlockTexture(SDL_Texture* texture)
 
 {|
 |'''texture'''
-|the SDL_Texture structure locked by [[SDL_LockTexture]]()
+|a texture locked by [[SDL_LockTexture]]()
 |}
 
 == Code Examples ==
