--- a/SDL_DestroyCond.mediawiki
+++ b/SDL_DestroyCond.mediawiki
@@ -14,7 +14,7 @@ void SDL_DestroyCond(SDL_cond* cond)
 == Function Parameters ==
 {|
 |'''cond'''
-|^the SDL_cond to be destroyed^
+|^the condition variable to destroy^
 |}
 
 == Code Examples ==
