--- a/SDL_CondWaitTimeout.mediawiki
+++ b/SDL_CondWaitTimeout.mediawiki
@@ -18,10 +18,10 @@ int SDL_CondWaitTimeout(SDL_cond*  cond,
 == Function Parameters ==
 {|
 |'''cond'''
-|^the applicable SDL_cond^ ???
+|^the applicable condition variable^ ???
 |-
 |'''mutex'''
-|^a pointer to the SDL_mutex to be timed out^ ???
+|^a pointer to the mutex to be timed out^ ???
 |-
 |'''ms'''
 |^the maximum number of milliseconds to wait^
