update content - pointers, struct

--- a/SDL_mutexP.mediawiki
+++ b/SDL_mutexP.mediawiki
@@ -14,7 +14,7 @@ int SDL_mutexP(SDL_mutex* mutex)
 == Function Parameters ==
 {|
 |'''mutex'''
-|^the SDL_mutex to be locked^
+|^the mutex to lock^
 |}
 
 == Return Value ==
