--- a/SDL_CreateMutex.mediawiki
+++ b/SDL_CreateMutex.mediawiki
@@ -12,7 +12,7 @@ SDL_mutex* SDL_CreateMutex(void)
 ```
 
 == Return Value ==
-Returns ^a pointer to an SDL_mutex structure to be initialized in an unlocked state.^
+Returns ^the initialized and unlocked mutex.^
 
 <<Color2(green,What if it fails?  NULL?  Negative error code?)>>
 
