update content - pointers, struct

--- a/SDL_SemPost.mediawiki
+++ b/SDL_SemPost.mediawiki
@@ -16,7 +16,7 @@ int SDL_SemPost(SDL_sem* sem)
 == Function Parameters ==
 {|
 |'''sem'''
-|^the SDL_sem to be incremented^
+|^the semaphore to increment^
 |}
 
 == Return Value ==
