--- a/SDL_CreateSemaphore.mediawiki
+++ b/SDL_CreateSemaphore.mediawiki
@@ -18,9 +18,9 @@ SDL_sem* SDL_CreateSemaphore(Uint32 initial_value)
 |}
 
 == Return Value ==
-*<br/>Returns a pointer to an initialized semaphore or NULL if there was an error.<br/>*
+^Returns the semaphore or NULL if there was an error^; call [[SDL_GetError]]() for more information.
 
-; call [[SDL_GetError]]() for more information.
+*<br/>Returns a pointer to an initialized semaphore or NULL if there was an error.<br/>*
 
 == Code Examples ==
 *
