--- a/SDL_DestroySemaphore.mediawiki
+++ b/SDL_DestroySemaphore.mediawiki
@@ -14,7 +14,7 @@ void SDL_DestroySemaphore(SDL_sem* sem)
 == Function Parameters ==
 {|
 |'''sem'''
-|^the SDL_sem to be destroyed^
+|^the semaphore to destroy^
 |}
 
 == Code Examples ==
