--- a/SDL_ShowWindow.mediawiki
+++ b/SDL_ShowWindow.mediawiki
@@ -13,7 +13,7 @@ void SDL_ShowWindow(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to be shown
+|the window to be shown
 |}
 
 == Code Examples ==
