--- a/SDL_SetWindowTitle.mediawiki
+++ b/SDL_SetWindowTitle.mediawiki
@@ -14,7 +14,7 @@ void SDL_SetWindowTitle(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to change
+|the window to change
 |-
 |'''title'''
 |the desired window title in UTF-8 format
