--- a/SDL_SetWindowSize.mediawiki
+++ b/SDL_SetWindowSize.mediawiki
@@ -15,7 +15,7 @@ void SDL_SetWindowSize(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to change
+|the window to change
 |-
 |'''w'''
 |the width of the window in pixels
