--- a/SDL_SetWindowDisplayMode.mediawiki
+++ b/SDL_SetWindowDisplayMode.mediawiki
@@ -14,10 +14,10 @@ int SDL_SetWindowDisplayMode(SDL_Window*            window,
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to affect
+|the window to affect
 |-
 |'''mode'''
-|the [[SDL_DisplayMode]] to use, or NULL to use the window's dimensions and the desktop's format and refresh rate
+|the [[SDL_DisplayMode]] structure representing the mode to use, or NULL to use the window's dimensions and the desktop's format and refresh rate
 |}
 
 == Return Value ==
