--- a/SDL_RaiseWindow.mediawiki
+++ b/SDL_RaiseWindow.mediawiki
@@ -13,7 +13,7 @@ void SDL_RaiseWindow(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to be raised
+|the window to raise
 |}
 
 == Code Examples ==
