--- a/SDL_GetWindowTitle.mediawiki
+++ b/SDL_GetWindowTitle.mediawiki
@@ -13,7 +13,7 @@ const char* SDL_GetWindowTitle(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to query
+|the window to query
 |}
 
 == Return Value ==
