--- a/SDL_GetWindowSize.mediawiki
+++ b/SDL_GetWindowSize.mediawiki
@@ -15,7 +15,7 @@ void SDL_GetWindowSize(SDL_Window* window,
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to query
+|the window to query
 |-
 |'''w'''
 |a pointer filled in with the width of the window
