--- a/SDL_GetThreadID.mediawiki
+++ b/SDL_GetThreadID.mediawiki
@@ -14,7 +14,7 @@ SDL_threadID SDL_GetThreadID(SDL_Thread* thread)
 == Function Parameters ==
 {|
 |'''thread'''
-|^the desired/specified SDL_Thread to query^
+|^the desired/specified thread to query^
 |}
 
 == Return Value ==
