--- a/SDL_FilterEvents.mediawiki
+++ b/SDL_FilterEvents.mediawiki
@@ -19,15 +19,11 @@ void SDL_FilterEvents(SDL_EventFilter filter,
 == Function Parameters ==
 {|
 |'''filter'''
-|^the SDL_EventFilter to be referenced/run ???^; see [[#Remarks|Remarks]] for details
+|a function that gets called when an event happens; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
-|^a pointer to the user-specified information to be filtered^
+|^a pointer filled in with user-specified information to be filtered^
 |}
-
-<<Color2(green,There is currently no page for SDL_EventFilter.  Is it a macro or callback function?  Should it be referenced in Remarks based on the [[SDL_SetEventFilter]]() info?  See below...)>>
-
-<<Color2(green,Is userdata an exception to the 'pointer rule'?)>>
 
 == Code Examples ==
 ```c++
@@ -35,14 +31,12 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
-
-SDL_EventFilter has the following syntax:
-```c++
-int SDL_EventFilter(void*      userdata, 
-                    SDL_Event* event)
+The '''filter''' function has the following form:
+```
+int SDL_EventFilter(void* userdata, SDL_Event* event)
 ```
 where '''userdata''' is the event queue to filter and '''event''' is the desired event to pull from the queue.
+<<Color2(green,Should this be formatted like the syntax section?)>>
 
 See [[SDL_SetEventFilter]]() for more information.
 
