--- a/SDL_DestroyTexture.mediawiki
+++ b/SDL_DestroyTexture.mediawiki
@@ -13,7 +13,7 @@ void SDL_DestroyTexture(SDL_Texture* texture)
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to destroy
+|the texture to destroy
 |}
 
 == Code Examples ==
